<resources>
    <string name="app_name">NotasSQLite</string>
    <string name="menu_about">Acerca de...</string>
    <string name="lblTitulo">Título:</string>
    <string name="lblContenido">Contenido:</string>
    <string name="txtBusqueda" />
    <string name="txtTitulo" />
    <string name="lblDescripcion">Descripción:</string>
    <string name="btnGuardar">Guardar nota</string>
    <string name="btnVolver">Volver</string>
    <string name="lblFecha">Fecha:</string>
    <string name="txtFecha" />
    <string name="lblTipo">Tipo:</string>
    <string name="lblPrioridad">Prioridad:</string>
    <string name="menuContextVerDetalles">Ver detalles</string>
    <string name="menuContextBorrarNota">Borrar contacto</string>
    <string name="menuContextEditarNota">Editar nota</string>
    <string name="lblCrearNota">Crear nueva nota</string>
    <string name="btnGuardarCambios">Guardar</string>
    <string name="menu_GuardarCambios">Guardar nota</string>
    <string name="txtContenido" />
    <string name="txtTipo" >Titulo de la nota</string>
    <string name="txtPrioridad" >Prioridad de la nota</string>
    <string name="lblVerTitulo" >Titulo de la nota</string>
    <string name="lblVerContenido" >Contenido de la nota</string>
    <string name="lblVerFecha" >Fecha de la nota</string>


</resources>
