<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/fab_margin"
    android:layout_marginRight="@dimen/fab_margin"
    android:layout_marginTop="@dimen/fab_margin"
    android:orientation="vertical"
    tools:context="es.ipo2.notassqlite.VerNota">

    <TextView
        android:id="@+id/lblTituloN"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:text="@string/lblTitulo"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/lblVerTitulo"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lblDescripcion"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:text="@string/lblDescripcion"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtContenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:maxLines="8"
        android:text="@string/lblVerContenido"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lblFecha"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:text="@string/lblFecha"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/lblVerFecha"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lblTipo"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:text="@string/lblTipo"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/txtTipo"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lblPrioridad"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:text="@string/lblPrioridad"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtPrioridad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/txtPrioridad"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnVolver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            android:onClick="oyente_btnVolver"
            android:text="@string/btnVolver"
            android:textColor="@android:color/background_light"
            android:visibility="visible" />


    </LinearLayout>


</LinearLayout>
