<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/fab_margin"
    android:layout_marginRight="@dimen/fab_margin"
    android:layout_marginTop="@dimen/fab_margin"
    android:orientation="vertical"
    tools:context="es.ipo2.notassqlite.DetallesNota">

    <TextView
        android:id="@+id/lblTituloN"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_weight="1"
        android:text="@string/lblTitulo"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        android:text="@string/txtTitulo" />

    <TextView
        android:id="@+id/lblDescripcion"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_weight="1"
        android:text="@string/lblDescripcion"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/lblFecha"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_weight="1"
        android:text="@string/lblFecha"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        android:text="@string/txtFecha" />

    <TextView
        android:id="@+id/lblTipo"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:text="@string/lblTipo"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/lblPrioridad"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:text="@string/lblPrioridad"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spPrioridad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnVolver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            android:onClick="oyente_btnVolver"
            android:text="@string/btnVolver"
            android:textColor="@android:color/background_light"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnGuardarCambios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            android:onClick="oyente_btnGuardarCambios"
            android:text="@string/btnGuardarCambios"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:visibility="visible" />


    </LinearLayout>


</LinearLayout>
