<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/fab_margin"
    android:layout_marginRight="@dimen/fab_margin"
    android:layout_marginTop="@dimen/fab_margin"
    android:orientation="vertical"
    tools:context="es.ipo2.notassqlite.NuevaNota">

    <TextView
        android:id="@+id/lblTituloN"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_weight="1"
        android:text="@string/lblTitulo"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"

        android:hint="por ej: hacer la compra.."
        android:inputType="textPersonName"
        android:singleLine="true"
        android:text="@string/txtTitulo"
        android:textColorLink="@color/colorPrimary" />

    <TextView
        android:id="@+id/lblDescripcion"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_weight="1"
        android:text="@string/lblDescripcion"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="por ej: comprar frutas, agua, verduras.."
        android:inputType="textMultiLine"
        android:textColorLink="@color/colorPrimary" />

    <TextView
        android:id="@+id/lblFecha"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_weight="1"
        android:text="@string/lblFecha"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="por ej: hoy, sobre las 6 de la tarde"
        android:inputType="textPersonName"
        android:text="@string/txtFecha"
        android:textColorLink="@color/colorPrimary" />

    <TextView
        android:id="@+id/lblTipo"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:text="@string/lblTipo"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/lblPrioridad"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:text="@string/lblPrioridad"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spPrioridad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            android:enabled="false"
            android:onClick="oyente_btnGuardar"
            android:text="@string/btnGuardar"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnVolver"
            android:layout_width="337dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            android:onClick="oyente_btnVolver"
            android:text="@string/btnVolver"
            android:textColor="@android:color/background_light" />

    </LinearLayout>

</LinearLayout>
