<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imagNota"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="12dp"
        android:minHeight="70dp"
        android:minWidth="70dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblTitulo"
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:text="@string/lblTitulo"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblContenido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/lblContenido"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lblFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblFecha"
            android:textSize="16sp"
            android:textStyle="italic" />
    </LinearLayout>

</LinearLayout>